--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,20 +1,30 @@
-/* src/components/navbar.css */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f3f3f3;
+  background-color: #ff9000;
   padding: 15px 30px;
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1); /* Modern shadow effect */
-  border-bottom-left-radius: 40px; /* Rounded lower left corner */
-  border-bottom-right-radius: 20px; /* Rounded lower right corner */
+  box-shadow: 0 10px 6px rgba(0, 0, 0, 0.1); /* Modern shadow effect */
+  border-bottom-left-radius: 10px; /* Rounded lower left corner */
+  border-bottom-right-radius: 10px; /* Rounded lower right corner */
   position: sticky;
   top: 0;
   z-index: 100;
 }
 
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-brand img {
+  height: 1.5em; /* Ajuste la taille de l'image par rapport au texte */
+  width: auto; /* Maintient les proportions de l'image */
+  margin-right: 10px; /* Espace entre l'image et le texte */
+}
+
 .navbar-brand h2 {
-  color: orange;
+  color: white;
   margin: 0;
   font-size: 24px;
   font-weight: bold;
@@ -32,7 +42,7 @@
 }
 
 .navbar-links a {
-  color: orange;
+  color: white;
   text-decoration: none;
   font-size: 18px;
   font-weight: 600;
@@ -42,7 +52,7 @@
 }
 
 .navbar-links a:hover {
-  color: #ff8c00;
+  color: white;
 }
 
 .navbar-links a::after {
@@ -50,7 +60,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background-color: orange;
+  background-color: white;
   position: absolute;
   bottom: 0;
   left: 0;
