--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ff9000;
+  background-color: #A288E3;
   padding: 15px 30px;
   box-shadow: 0 10px 6px rgba(0, 0, 0, 0.1); /* Modern shadow effect */
   border-bottom-left-radius: 10px; /* Rounded lower left corner */
