page de connexion fonctionelle

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,52 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.inscription, .login {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  width: 350px; 
+  margin: 0 auto; 
+  padding: 20px;
+  text-align: center; /* Centre le texte à l'intérieur */
+  
+}
+
+.inscription h2, .login h2 {
+  text-align: center;
+}
+
+form div {
+  margin-bottom: 10px;
+}
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
